# nicholsdiversity

./: .zenodo.json  CONTRIBUTORS.md  README.md  cldfbench_nicholsdiversity.py  metadata.json  pyproject.toml  setup.py
cldf/: README.md  cldf-metadata.json  codes.csv  languages.csv  parameters.csv  requirements.txt  sources.bib  values.csv
etc/: codes.csv  glottocodes.csv  languages.csv  parameters.csv  sources.bib
raw/: Nichols1992_with_Pnames.csv
